syntax = "proto3";
package comdex.auction.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/auction/v1beta1/params.proto";
import "comdex/auction/v1beta1/auction.proto";
import "comdex/auction/v1beta1/biddings.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/comdex-official/comdex/x/auction/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

message QueryAuctionRequest {
  uint64 id = 1;
}

message QueryAuctionResponse {
  CollateralAuction auction = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"auction\"" ];
}

message QueryAuctionsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryAuctionsResponse {
  repeated CollateralAuction auctions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"auctions\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryBiddingsRequest {
  string bidder = 1;
}

message QueryBiddingsResponse {
  string bidder = 1 [
    (gogoproto.moretags) = "yaml:\"bidder\""
  ];
  repeated Biddings biddings = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"biddings\""
  ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

service QueryService {
  rpc QueryAuction(QueryAuctionRequest) returns (QueryAuctionResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/auction/{id}";
  }
  rpc QueryAuctions(QueryAuctionsRequest) returns (QueryAuctionsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/auctions";
  }
  rpc QueryBiddings(QueryBiddingsRequest) returns (QueryBiddingsResponse) {
    option (google.api.http).get = "/comdex/auction/v1beta1/biddings/{bidder}";
  }
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
      option (google.api.http).get = "/comdex/auction/v1beta1/params";
  }
}
